--- a/obs_timer_bar.html
+++ b/obs_timer_bar.html
@@ -30,9 +30,10 @@
       transition: width 0.5s linear;
     }
     #progressText {
-      margin-top: 5px;
-      font-size: 18px;
-      color: #000000;
+      margin-top: 10px;
+      font-size: 34px;
+      color: #5c4633;
+     letter-spacing: 26px;
     }
     input, button {
       margin: 10px;
